[project]
name = "DFL-node-suite-comfyui"
description = ""
version = "1.0.2"
license = { file = "LICENSE" }
dependencies = ["cmake", "fairscale>=0.4.4", "git+https://github.com/WASasquatch/img2texture.git", "git+https://github.com/WASasquatch/cstr", "gitpython", "imageio", "joblib", "matplotlib", "numba", "numpy", "opencv-python-headless[ffmpeg]<=4.7.0.72", "pilgram", "git+https://github.com/WASasquatch/ffmpy.git", "rembg", "scikit-image>=0.20.0", "scikit-learn", "scipy", "timm>=0.4.12", "tqdm", "transformers"]

[project.urls]
Repository = "https://github.com/Arthurzhangsheng/comfyui_DFLimage"


[tool.comfy]
PublisherId = "DFL"
DisplayName = "DFL Node Suite"
Icon = ""
